--- a/app/index.css
+++ b/app/index.css
@@ -13,9 +13,9 @@
   --popover-foreground: oklch(0.985 0 0);
   --primary: hsl(0, 0%, 100%);
   --primary-foreground: hsl(0, 0%, 0%);
-  --secondary: hsl(60, 2%, 14%);
+  --secondary: hsl(0, 0%, 12%);
   --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.57 0 0);
+  --muted: oklch(70.251% 0.00008 271.152);
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
@@ -104,7 +104,7 @@
 }
 
 .text-link {
-  @apply underline duration-300 hover:text-white/70;
+  @apply underline duration-300 text-blue-400 hover:text-blue-500;
 }
 
 .description {
