Updated font for logo

--- a/server/resources/css/app.css
+++ b/server/resources/css/app.css
@@ -3,6 +3,7 @@
 @theme {
     --font-sans: "Inter", sans-serif;
     --font-roboto: "Roboto", sans-serif;
+    --font-nunito: "Nunito", sans-serif;
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --color-sidebar-ring: var(--sidebar-ring);
